--- a/short_link/convert_link/templates/index.html
+++ b/short_link/convert_link/templates/index.html
@@ -7,6 +7,13 @@
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
-<h2>Hello everybody!</h2>
+<div class="container md-6">
+    <h2>Hi {{ request.user }}</h2>
+    <form action="{% url 'index' %}" method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button class="btn btn-success">Generate short link</button>
+    </form>
+</div>
 </body>
 </html>
