--- a/short_link/convert_link/templates/index.html
+++ b/short_link/convert_link/templates/index.html
@@ -2,17 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Short link service</title>
+    <title>Генератор коротких ссылок</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
 <div class="container md-6">
-    <h2>Hi {{ request.user }}</h2>
-    <form action="{% url 'index' %}" method="post">
+    <h2 class="mt-5">Привет, {{ user_title }}</h2>
+    <form action="{% url 'index' %}" method="post" enctype="multipart/form-data" class="mt-4">
+        {% for message in messages %}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger" role="alert">
+                            {{ message }}
+                        </div>
+                    {% else %}
+                        <div class="alert alert-{{ message.tags }}" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
         {% csrf_token %}
-        {{form.as_p}}
-        <button class="btn btn-success">Generate short link</button>
+        <p><label class="form-label">{{ form.source_link.label }}:</label>{{ form.source_link }}</p>
+        <button class="btn btn-success">Сгенерировать короткую ссылку</button>
     </form>
 </div>
 </body>
