--- a/short_link/convert_link/templates/index.html
+++ b/short_link/convert_link/templates/index.html
@@ -1,30 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Генератор коротких посилань</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
-<body>
-<div class="container md-6">
-    <h3 class="mt-4">Користувач: {{ request.user }}</h3>
-    <form action="{% url 'index' %}" method="post" enctype="multipart/form-data" class="mt-4">
-        {% for message in messages %}
-                    {% if message.tags == 'error' %}
-                        <div class="alert alert-danger" role="alert">
-                            {{ message }}
-                        </div>
-                    {% else %}
-                        <div class="alert alert-{{ message.tags }}" role="alert">
-                            {{ message }}
-                        </div>
-                    {% endif %}
-                {% endfor %}
-        {% csrf_token %}
-        <p><label class="form-label">{{ form.source_link.label }}:</label>{{ form.source_link }}</p>
-        <button class="btn btn-success">Створити коротке посилання</button>
-    </form>
-</div>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h3 class="mt-4">Користувач: {{ request.user }}</h3>
+<form action="{% url 'index' %}" method="post" enctype="multipart/form-data" class="mt-4">
+    {% include 'messages.html' %}
+    {% csrf_token %}
+    <p><label class="form-label">{{ form.source_link.label }}:</label>{{ form.source_link }}</p>
+    <button class="btn btn-success">Створити коротке посилання</button>
+</form>
+{% endblock %}
