--- a/short_link/convert_link/templates/result.html
+++ b/short_link/convert_link/templates/result.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="align-items-center">
-<h4 class="mt-4"><small>Ваше коротке посилання: </small><strong>{{ short_link }}</strong></h4>
-<h5 class="mt-4">Використання: <a href="{{ request.META.HTTP_ORIGIN }}/redirect/{{ short_link }}">{{ request.META.HTTP_ORIGIN }}/redirect/{{ short_link }}</a></h5>
-    </div>
+    <h4 class="mt-4"><small>Ваше коротке посилання: </small><strong>{{ short_link }}</strong></h4>
+    <h5 class="mt-4">Використання: <a href="{{ request.META.HTTP_ORIGIN }}/redirect/{{ short_link }}">{{ request.META.HTTP_ORIGIN }}/redirect/{{ short_link }}</a></h5>
+    <form action="{% url 'index' %}">
+        <button class="btn btn-success mt-3">Створити ще одне коротке посилання</button>
+    </form>
+</div>
 {% endblock %}
